[tool.poetry]
name = "ntruencrypt"
version = "0.1.0"
description = ""
authors = ["Pranshu <pranshu2.71828@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.1.2"
sympy = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
